Fixed layout issues

--- a/accs_app/app/static/app/styles.css
+++ b/accs_app/app/static/app/styles.css
@@ -50,6 +50,7 @@ p {
 }
 .record-btn {
   min-width: 140px;
+  margin: 5px;
 }
 .nav-justified-left {
   display: flex;
